--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body, html {
 
 /* First image for Computers (Logo. Full height) */
 .bgimg-1a {
-  background-image: url('/src/images/AGC-landscape-cropped.jpg');
+  background-image: url('/src/images/AGC-bkgd.jpg');
   min-height: 100%; 
 }
 
@@ -42,13 +42,13 @@ body, html {
 
 /* Second image (Design) */
 .bgimg-2 {
-  background-image: url("/src/images/mountains2.jpg");
+  background-image: url("/src/images/bkgd-mtns.jpg");
   min-height: 400px;
 }
 
 /* Third image (Contact) */
 .bgimg-3 {
-  background-image: url("/src/images/mountains4.jpg");
+  background-image: url("/src/images/bkgd-desert.jpg");
   min-height: 400px;
 }
 
