--- a/index.html
+++ b/index.html
@@ -227,58 +227,53 @@ body, html {
   </div>
 </div>
 
+
 <!-- Container (The Team Section) -->
 <div class="w3-content w3-container w3-padding-32" id="team">
-  <div class="w3-content w3-container " id="Team">
+  <div class="w3-content w3-container" id="Team">
     <style>
       .person-section {
         border: 2px solid #ccc;
         padding: 10px;
         margin-bottom: 20px;
+        text-align: center; /* Center the content */
+        min-width: 200px;
+        min-height: 445px;
+      }
+
+      .profile-image {
+        width: 150px;
+        height: 150px;
+        border-radius: 50%;
+        margin-bottom: 10px;
       }
     </style>
     <div class="w3-row">
       <div class="w3-col m3 person-section">
-        <h3 class="w3-center">
-          Robert Reitz
-        </h3>
-        <h5 class="w3-center">
-          Chief Operations Officer
-        </h5>
-        <p class="w3-center">
-          LCDR SEAL (Retired)<br>
+        <img src="src/images/diogenes.jpg" alt="Robert Reitz" class="profile-image">
+        <h3>Robert Reitz</h3>
+        <h5>Chief Operations Officer</h5>
+        <p>
+          SEAL (Retired)<br>
           Business Development
         </p>
       </div>
-
-      <div class="w3-col m2"><h3 class="w3-center"></h3>
-
-      </div>
-      <div class="w3-col m2 person-section">
-        <h3 class="w3-center">
-          Jeff Laurell
-        </h3>
-        <h5 class="w3-center">
-          President
-        </h5>
-        <p class="w3-center">
+      <div class="w3-col m1"><h3></h3></div>
+      <div class="w3-col m3 person-section">
+        <img src="src/images/jeff.jpg" alt="Jeff Laurell" class="profile-image">
+        <h3>Jeff Laurell</h3>
+        <h5>President</h5>
+        <p>
           Business Development<br>
-          Avid Hunter &
-          Outdoorsman
+          Avid Hunter & Outdoorsman
         </p>
       </div>
-
-      <div class="w3-col m2"><h3 class="w3-center"></h3>
-
-      </div>
+      <div class="w3-col m1"><h3></h3></div>
       <div class="w3-col m3 person-section">
-        <h3 class="w3-center">
-          Colin Ingram Ph.D.
-        </h3>
-        <h5 class="w3-center">
-          Chief Technical Officer
-        </h5>
-        <p class="w3-center">
+        <img src="src/images/colin.jpg" alt="Colin Ingram" class="profile-image">
+        <h3>Colin Ingram Ph.D.</h3>
+        <h5>Chief Technical Officer</h5>
+        <p>
           Biophysicist<br>
           Background in Optical Spectroscopies and Fluorescence Microscopy Techniques
         </p>
@@ -288,14 +283,13 @@ body, html {
 </div>
 
 
-
-
 <!-- Fourth Parallax Image -->
 <div class="bgimg-4 w3-display-container w3-opacity-min">
   <div class="w3-display-middle">
      <span class="w3-xxlarge w3-text-white w3-wide">CONTACT</span>
   </div>
 </div>
+
 
 <!-- Container (Contact Section) -->
 <div class="w3-content w3-container w3-padding-32" id="contact" style="max-width: 1200px; margin: 0 auto;">
@@ -310,7 +304,6 @@ body, html {
     <div class="w3-col m3 w3-container">
       <img src="src/images/AGMtnLogo.jpg" class="w3-image w3-round" style="width:100%">
     </div>
-    
     <!-- Centered Form and Message Column -->
     <div class="w3-col m6 w3-panel w3-center">
       <div class="w3-large w3-margin-bottom">
