--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ body, html {
       <li style="font-size: 22px;">Fashion
           <!-- Sublist for Fashion -->
           <ul style="list-style-type: none; padding: 0;">
-              <li style="font-size: 16px;">(Streetwear, Swimwear, Ski/Snowboard Gear, etc.)</li>
+              <li style="font-size: 16px;">(Streetwear, Swimwear, Ski/Snowboard Wear, etc.)</li>
           </ul>
       </li>
     </ul>
