--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@ body, html {
 
 <!-- Container (The Team Section) -->
 <div class="w3-content w3-container w3-padding-32" id="team">
-  <div class="w3-content w3-container" id="Team">
+  <div class="w3-content w3-container">
     <style>
       .person-section {
         border: 2px solid #ccc;
