--- a/index.html
+++ b/index.html
@@ -4,78 +4,12 @@
 <title>Alpha Ghost</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<!-- External styles -->
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
-<!-- For social media icons -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> 
-
-
-
-<style>
-body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif;}
-body, html {
-  height: 100%;
-  color: #777;
-  line-height: 1.8;
-  background-color: #000000;
-}
-
-/* Create a Parallax Effect */
-.bgimg-1a, .bgimg-1b, .bgimg-2, .bgimg-3, .bgimg-4 {
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-/* First image for Computers (Logo. Full height) */
-.bgimg-1a {
-  background-image: url('/src/images/AGC-bkgd.jpg');
-  min-height: 100%; 
-  background-size: 100% 100%;
-}
-
-/* First image for Phones (Logo. Full height) */
-.bgimg-1b {
-  background-image: url('/src/images/AGC-bkgd-mobile.jpg');
-  min-height: 100%; 
-  background-size: 100% 100%;
-}
-
-/* Second image (Design) */
-.bgimg-2 {
-  background-image: url("/src/images/bkgd-mtns.jpg");
-  min-height: 400px;
-}
-
-/* Third image (Contact) */
-.bgimg-3 {
-  background-image: url("/src/images/bkgd-desert.jpg");
-  min-height: 400px;
-}
-
-/* Forth image */
-.bgimg-4 {
-  background-image: url("src/images/bkgr-jungle.jpg");
-  min-height: 400px;
-}
-
-.w3-wide {letter-spacing: 10px;}
-.w3-hover-opacity {cursor: pointer;}
-
-.w3-bar-item {
-  color: #ffffff; /* Hexadecimal code for light gray */
-  /* Or you can use RGB values: color: rgb(204, 204, 204); */
-}
-
-/* Turn off parallax scrolling for tablets and phones */
-@media only screen and (max-device-width: 1600px) {
-  .bgimg-1b, .bgimg-2, .bgimg-3, .bgimg-4{
-    background-attachment: scroll;
-    min-height: 400px;
-  }
-}
-</style>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">  <!-- For social media icons -->
+<!-- Internal styles -->
+<link rel="stylesheet" href="/src/style.css">
 </head>
 <body>
 
@@ -231,23 +165,6 @@ body, html {
 <!-- Container (The Team Section) -->
 <div class="w3-content w3-container w3-padding-32" id="team">
   <div class="w3-content w3-container">
-    <style>
-      .person-section {
-        border: 2px solid #ccc;
-        padding: 10px;
-        margin-bottom: 20px;
-        text-align: center; /* Center the content */
-        min-width: 200px;
-        min-height: 445px;
-      }
-
-      .profile-image {
-        width: 150px;
-        height: 150px;
-        border-radius: 50%;
-        margin-bottom: 10px;
-      }
-    </style>
     <div class="w3-row">
       <div class="w3-col m3 person-section">
         <img src="src/images/diogenes.jpg" alt="Robert Reitz" class="profile-image">
@@ -358,42 +275,6 @@ body, html {
 
 
 
-
-
-<script>
-function goTop(){
-  // Check if the browser supports smooth scrolling
-  if ('scrollBehavior' in document.documentElement.style) {
-    // Modern browsers with smooth scrolling support
-    window.scrollTo({
-      top: 0,
-      behavior: 'smooth'
-    });
-  } else {
-    // Fallback for browsers that do not support smooth scrolling
-    window.scrollTo(0, 0);
-  }
-}
-
-// Change style of navbar on scroll
-window.onscroll = function() {myFunction()};
-function myFunction() {
-    var navbar = document.getElementById("myNavbar");
-    if (document.body.scrollTop > 100 || document.documentElement.scrollTop > 100) {
-        navbar.className = "w3-bar" + " w3-card" + " w3-animate-top" + " w3-black";
-    } else {
-        navbar.classList.remove("w3-card", "w3-animate-top", "w3-black");
-        navbar.className = navbar.className.replace(" w3-card w3-animate-top w3-white", "");
-    }
-}
-
-// Used to toggle the menu on small screens when clicking on the menu button
-function toggleFunction() {
-  var x = document.getElementById("navDemo");
-  x.classList.toggle("w3-show");
-}
-
-</script>
-
+<script src="script.js"></script>
 </body>
 </html>
