edits from email 2/7

--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
       <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-margin-right"><i class="fa fa-envelope w3-padding-small"></i> CONTACT</a>
     </div>
   </div>
-
   <!-- Navbar on small and medium screens -->
   <div class="w3-hide-large">
     <a class="w3-bar-item w3-button w3-hover-black w3-right" href="javascript:void(0);" onclick="toggleFunction()" title="Toggle Navigation Menu">
@@ -63,46 +62,39 @@
   <p class="w3-center w3-padding-32">
     Our team at Alpha Dynamic Concepts (ADC) has vastly expanded knowledge of the camouflage science through countless
     hours of cross-disciplinary applied research and development, using a creative, unconventional mindset.
-    Our primary focus thus far has been directed towards military applications. ADC is only now beginning to pursue
-    business opportunities in the hunting and commercial industries. We intend to deliver the absolute best camouflage
+    Our primary focus thus far has been directed towards military applications. ADC is now beginning to pursue
+    business opportunities in the hunting and commercial industries. We will to deliver the absolute best camouflage
     system available.
   </p>
 </div>
 
 <!-- Second Parallax Image -->
-<div class="bgimg-2 w3-display-container w3-opacity-min">
+<div class="bgimg-2 w3-display-container w3-opacity-min" id="Camo">
   <div class="w3-display-middle">
-  </div>
+    <span class="w3-xxlarge w3-text-white w3-wide">CAMOUFLAGE PATTERNS</span>
+ </div>
 </div>
 
 <!-- Container (Camo Patterns Section) -->
-<div class="w3-content w3-container w3-padding-64" id="Camo">
-  <h3 class="w3-center">Camouflage Patterns</h3>
+<div class="w3-content w3-container w3-padding-64">
   <p class="w3-center">
-      Within the Alpha Ghost Camouflage line are planned environmental subsets such as Mountain Ghost&trade; - Urban Ghost&trade; - Desert Ghost&trade; - and more! Our design
-      team can easily and rapidly modify patterns to conceal in any specific environment necessary, which opens the door to unlimited marketing possibilities.
-      Our patterns can be modified to suit market needs in any terrain. 
+      Our design team can easily and rapidly modify patterns to conceal in any specific environment necessary, 
+      which opens the door to unlimited marketing possibilities. Our patterns can be modified to suit market needs in any terrain. 
   </p>
   <div class="w3-row">
     <div class="w3-col m12 w3-center w3-padding-large">
       <img src="src/images/camo-examples.jpg" class="w3-round w3-image" alt="Camo Patterns" width="100%" height="auto">
-      <p class="w3-center">
-        Soldier wearing prototype model uniform in Mountain Arid Pattern.<br>
-        Mountain Arid Pattern on Rt. in the NIR/SWIR/ Cool White Room photos below.
-      </p>
     </div>
   </div>
-  <h3 class="w3-center">Some of the High Performance Characteristics of the Alpha Ghost Camouflage Line</h3>
   <ul>
-    <li>Natural Environment Matching Fractal Patterns Customizable to Any Environment (Broad or Specific) - Rapid Design Technology - No Guesswork</li>
+    <li>Natural Environment Matching Fractal Patterns Customizable to Any Environment (Broad or Specific) - No Guesswork</li>
     <li>Commercial/Hunting Variations - Urban/Alpine/Mountain/Desert/Jungle/ Field, etc.</li>
     <li>Law Enforcement/Military Capable Variations</li>
-    <li>Very Aesthetically Appealing for Marketability (Cool Factor)</li>
-    <li>Exceptional and Unique Marketing Ideas</li>
-    <li>Simultaneously Reduces Contrast in Low Light Environments and Daylight Environments Across a Broad Spectral Region
-      <br><div class="w3-hide-small" style="text-align: center; ">(As demonstrated in the photos below)</div></li>
+    <li>Very Aesthetically Appealing for Marketability</li>
+    <li>Simultaneously Reduces Contrast in Low Light Environments and Daylight Environments Across a Broad Spectral Region</li>
+    <li>Streetwear, Swimwear, Ski/Snowboard Wear, etc.</li>
   </ul>
-  <div class="w3-hide-small">
+  <!-- <div class="w3-hide-small">
     <div class="w3-row">
       <div class="w3-col m4 w3-center w3-padding-large">
         <p class="w3-center">
@@ -126,15 +118,13 @@
     <p class="w3-center">
       Photos above provided by RothTec Engraving – New Bedford, MA. Samples were not treated with NIR suppressing additives.
     </p>
-</div>
+  </div> -->
 </div>
 
 
 <!-- Another Parallax Image  -->
-
-
 <!-- Container (Commercial Section) -->
-<div class="w3-content w3-container w3-padding-64" id="about">
+<!-- <div class="w3-content w3-container w3-padding-64" id="about">
   <h2 class="w3-center">
     Commercial</h2>
   <div class="w3-center">
@@ -144,18 +134,17 @@
     <ul style="list-style-type: none; padding: 0;">
       <li style="font-size: 22px;">Vehicle Wraps</li>
       <li style="font-size: 22px;">Fashion
-          <!-- Sublist for Fashion -->
           <ul style="list-style-type: none; padding: 0;">
               <li style="font-size: 16px;">(Streetwear, Swimwear, Ski/Snowboard Wear, etc.)</li>
           </ul>
       </li>
     </ul>
   </div>
-</div>
+</div> -->
 
 
 <!-- Third Parallax Image -->
-<div class="bgimg-3 w3-display-container w3-opacity-min">
+<div class="bgimg-3 w3-display-container w3-opacity-min" id="team">
   <div class="w3-display-middle">
      <span class="w3-xxlarge w3-text-white w3-wide">MEET THE TEAM</span>
   </div>
@@ -163,37 +152,28 @@
 
 
 <!-- Container (The Team Section) -->
-<div class="w3-content w3-container w3-padding-32" id="team">
+<div class="w3-content w3-container w3-padding-32">
   <div class="w3-content w3-container">
     <div class="w3-row">
       <div class="w3-col m3 person-section">
         <img src="src/images/diogenes.jpg" alt="Robert Reitz" class="profile-image">
         <h3>Robert Reitz</h3>
         <h5>Chief Operations Officer</h5>
-        <p>
-          SEAL (Retired)<br>
-          Business Development
-        </p>
+        <p> SEAL (Retired)<br>Business Development</p>
       </div>
       <div class="w3-col m1"><h3></h3></div>
       <div class="w3-col m3 person-section">
         <img src="src/images/jeff.jpg" alt="Jeff Laurell" class="profile-image">
         <h3>Jeff Laurell</h3>
         <h5>President</h5>
-        <p>
-          Business Development<br>
-          Avid Hunter & Outdoorsman
-        </p>
+        <p>Business Development<br>Avid Hunter & Outdoorsman</p>
       </div>
       <div class="w3-col m1"><h3></h3></div>
       <div class="w3-col m3 person-section">
         <img src="src/images/colin.jpg" alt="Colin Ingram" class="profile-image">
         <h3>Colin Ingram Ph.D.</h3>
         <h5>Chief Technical Officer</h5>
-        <p>
-          Biophysicist<br>
-          Background in Optical Spectroscopies and Fluorescence Microscopy Techniques
-        </p>
+        <p>Biophysicist<br>Background in Optical Spectroscopies and Fluorescence Microscopy Techniques</p>
       </div>
     </div>
   </div>
@@ -201,7 +181,7 @@
 
 
 <!-- Fourth Parallax Image -->
-<div class="bgimg-4 w3-display-container w3-opacity-min">
+<div class="bgimg-4 w3-display-container w3-opacity-min" id="contact">
   <div class="w3-display-middle">
      <span class="w3-xxlarge w3-text-white w3-wide">CONTACT</span>
   </div>
@@ -209,7 +189,7 @@
 
 
 <!-- Container (Contact Section) -->
-<div class="w3-content w3-container w3-padding-32" id="contact" style="max-width: 1200px; margin: 0 auto;">
+<div class="w3-content w3-container w3-padding-32" style="max-width: 1200px; margin: 0 auto;">
   <h3 class="w3-center">How Can Alpha Ghost Camouflage Benefit Your Business?</h3>
   <p> Alpha Ghost Camouflage would be a perfect fit into any quality product line in the hunting and tactical industries, with 
       our own line of hunting and tactical clothing devised with the most effective and aesthetically appealing camouflage available.
@@ -246,14 +226,11 @@
         </button>
       </form>
     </div>
-
     <!-- Right Image Column -->
     <div class="w3-col m3 w3-container">
       <img src="src/images/american-flag-small.jpg" class="w3-image" style="width:100%">
     </div>
   </div>
-  
-  
 </div>
 
 <!-- Footer -->
@@ -272,9 +249,6 @@
 </footer>
 
 
-
-
-
-<script src="script.js"></script>
+<script src="/src/script.js"></script>
 </body>
 </html>
