new camo examples

--- a/index.html
+++ b/index.html
@@ -75,6 +75,54 @@
  </div>
 </div>
 
+<!-- Commented Section below is used to create camo pattern image
+      SHOULD BE REMOVED when image has been approved -->
+<!-- <style>
+  .image-container {
+  position: relative;
+  display: inline-block;
+}
+.text-overlay {
+    position: absolute;
+    color: black;
+    font-size: 24px;
+    font-weight: bold;
+  }
+  .text-overlay.first {
+    top: 5%;
+    left: 5%;
+  }
+  .text-overlay.second {
+    top: 22%;
+    left: 5%;
+  }
+  .text-overlay.third {
+    top: 40%;
+    left: 5%;
+  }
+  .text-overlay.fourth {
+    top: 60%;
+    left: 5%;
+  }
+  .text-overlay.fifth {
+    top: 80%;
+    left: 5%;
+  }
+</style>
+<div class="w3-row">
+  <div class="w3-col m12 w3-center w3-padding-large">
+    <div class="image-container">
+      <img src="src/images/AGC-camo.jpg" class="w3-round w3-image" alt="Camo Patterns" width="100%" height="auto">
+      <div class="text-overlay first"><em>FIELD GHOST&trade;</em></div>
+      <div class="text-overlay second"><em>WOODLAND GHOST&trade;</em></div>
+      <div class="text-overlay third"><em>DESERT GHOST&trade;</em></div>
+      <div class="text-overlay fourth"><em>MOUNTAIN GHOST&trade;</em></div>
+      <div class="text-overlay fifth"><em>URBAN GHOST&trade;</em></div>
+    </div>
+  </div>
+</div> -->
+
+
 <!-- Container (Camo Patterns Section) -->
 <div class="w3-content w3-container w3-padding-64">
   <p class="w3-center">
@@ -83,7 +131,7 @@
   </p>
   <div class="w3-row">
     <div class="w3-col m12 w3-center w3-padding-large">
-      <img src="src/images/camo-examples.jpg" class="w3-round w3-image" alt="Camo Patterns" width="100%" height="auto">
+      <img src="src/images/AGC-camo.png" class="w3-round w3-image" alt="Camo Patterns" width="100%" height="auto">
     </div>
   </div>
   <ul>
@@ -205,7 +253,6 @@
     <div class="w3-col m6 w3-panel w3-center">
       <div class="w3-large w3-margin-bottom">
         <i class="fa fa-map-marker fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Colorado, USA<br>
-        <i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Email: mail@mail.com<br>
         <a href="https://www.linkedin.com/company/alpha-dynamic-concepts-llc/" target="_blank">
           <i class="fa fa-linkedin fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> LinkedIn: Alpha Dynamic Concepts LLC
         </a>        
