--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     Our team at Alpha Dynamic Concepts (ADC) has vastly expanded knowledge of the camouflage science through countless
     hours of cross-disciplinary applied research and development, using a creative, unconventional mindset.
     Our primary focus thus far has been directed towards military applications. ADC is now beginning to pursue
-    business opportunities in the hunting and commercial industries. We will to deliver the absolute best camouflage
+    business opportunities in the hunting and commercial industries. We will deliver the absolute best camouflage
     system available.
   </p>
 </div>
