fix js file src error

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
+
 <head>
 <title>Alpha Ghost</title>
 <meta charset="UTF-8">
@@ -11,8 +13,9 @@
 <!-- Internal styles -->
 <link rel="stylesheet" href="/src/style.css">
 </head>
-<body>
 
+
+<body>
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
   <!-- Navbar on Large screens -->
@@ -52,9 +55,9 @@
 
 <!-- Container (About Section) -->
 <div class="w3-content w3-container w3-padding-64" id="about">
-  <h2 class="w3-center">
-    <img src="src/images/AGLogo.png" class="w3-image w3-round" style="width:25%">
-    <br>What is Alpha Ghost Camouflage?</h2>
+  <h1 class="w3-center">
+    <img src="src/images/AGLogo.png" class="w3-image w3-round" style="width:25%" alt="AGC-logo-transparent">
+    <br>What is Alpha Ghost Camouflage?</h1>
   <p>Created by Alpha Dynamic Concepts (ADC) in the ecologically diverse Colorado Rockies, Alpha Ghost Camouflage is a next generation system of camouflage technology with optimal performance characteristics.
      Our patterns are scientifically designed to conceal in a wider range of distances and a broader spectrum of light conditions. The patterns used are fractal
      based and mimic nature at the elemental level.
@@ -247,14 +250,14 @@
   <div class="w3-row w3-padding-32 w3-section">
     <!-- Left Image Column -->
     <div class="w3-col m3 w3-container">
-      <img src="src/images/AGMtnLogo.jpg" class="w3-image w3-round" style="width:100%">
+      <img src="src/images/AGMtnLogo.jpg" alt="AGC-logo" class="w3-image w3-round" style="width:100%">
     </div>
     <!-- Centered Form and Message Column -->
     <div class="w3-col m6 w3-panel w3-center">
       <div class="w3-large w3-margin-bottom">
         <i class="fa fa-map-marker fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Colorado, USA<br>
         <a href="https://www.linkedin.com/company/alpha-dynamic-concepts-llc/" target="_blank">
-          <i class="fa fa-linkedin fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> LinkedIn: Alpha Dynamic Concepts LLC
+          <i class="fa fa-linkedin fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Alpha Dynamic Concepts LLC
         </a>        
       </div>
       <p>Send a message, or leave a note:</p>
@@ -275,7 +278,7 @@
     </div>
     <!-- Right Image Column -->
     <div class="w3-col m3 w3-container">
-      <img src="src/images/american-flag-small.jpg" class="w3-image" style="width:100%">
+      <img src="src/images/american-flag-small.jpg" alt="us-flag" class="w3-image" style="width:100%">
     </div>
   </div>
 </div>
@@ -296,6 +299,6 @@
 </footer>
 
 
-<script src="/src/script.js"></script>
+<script type="module" src="/src/script.js"></script>
 </body>
 </html>
