--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 
 
 <head>
-  <title>Alpha Ghost</title>
+  <title>Alpha Ghost Camouflage</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" href="src/images/AGLogo.png" type="image/x-icon">
   <!-- External styles -->
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
@@ -59,9 +60,10 @@
   <h1 class="w3-center">
     <img src="src/images/AGLogo.png" class="w3-image w3-round" style="width:25%" alt="AGC-logo-transparent">
     <br>What is Alpha Ghost Camouflage?</h1>
-  <p>Created by Alpha Dynamic Concepts (ADC) in the ecologically diverse Colorado Rockies, Alpha Ghost Camouflage is a next generation system of camouflage technology with optimal performance characteristics.
-     Our patterns are scientifically designed to conceal in a wider range of distances and a broader spectrum of light conditions. The patterns used are fractal
-     based and mimic nature at the elemental level.
+  <p>Created by Alpha Dynamic Concepts (ADC) in the ecologically diverse Colorado Rockies, Alpha Ghost Camouflage 
+    is a next generation system of interactive camouflage technology with optimal performance characteristics.
+    Our patterns are scientifically designed to conceal in a wider range of distances and a broader spectrum of 
+    light conditions. The patterns used are fractal based and mimic nature at the elemental level.
   </p>
   <p class="w3-center w3-padding-32">
     Our team at Alpha Dynamic Concepts (ADC) has vastly expanded knowledge of the camouflage science through countless
@@ -114,7 +116,7 @@
   <div class="w3-content w3-container">
     <div class="w3-row">
       <div class="w3-col m3 person-section">
-        <img src="src/images/diogenes.jpg" alt="Robert Reitz" class="profile-image">
+        <img src="src/images/robert.jpg" alt="Robert Reitz" class="profile-image">
         <h3>Robert Reitz</h3>
         <h5>Chief Operations Officer</h5>
         <p> SEAL (Retired)<br>Business Development</p>
@@ -148,15 +150,16 @@
 <!-- Container (Contact Section) -->
 <div class="w3-content w3-container w3-padding-32" style="max-width: 1200px; margin: 0 auto;">
   <h3 class="w3-center">How Can Alpha Ghost Camouflage Benefit Your Business?</h3>
-  <p> Alpha Ghost Camouflage would be a perfect fit into any quality product line in the hunting and tactical industries, with 
-      our own line of hunting and tactical clothing devised with the most effective and aesthetically appealing camouflage available.
-      Based on a single, highly advanced pattern with environmentally matched colors that perfectly transcends both markets. Opportunities
-      for expansion could be enormous!
+  <p> 
+    Alpha Ghost Camouflage will be a perfect fit into any quality product brand in the hunting and tactical 
+    industries with the most effective, versatile and aesthetically appealing camouflage designs available. 
+    Our evolutionarily advanced patterns integrating and transcending both markets can create enormous 
+    opportunities for growing your business! Contact us below to learn more about licensing opportunities.
   </p>
   <div class="w3-row w3-padding-32 w3-section">
     <!-- Left Image Column -->
     <div class="w3-col m3 w3-container">
-      <img src="src/images/AGMtnLogo.jpg" alt="AGC-logo" class="w3-image w3-round" style="width:100%">
+      <img src="src/images/AGLogo-v2-3.png" alt="AGC-logo" class="w3-image w3-round" style="width:100%">
     </div>
     <!-- Centered Form and Message Column -->
     <div class="w3-col m6 w3-panel w3-center">
