adjust captcha text

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 <div class="w3-content w3-container w3-padding-64">
   <p class="w3-center">
       Our design team can easily and rapidly modify patterns to conceal in any specific environment necessary, 
-      which opens the door to unlimited marketing possibilities. Our patterns can be modified to suit market needs in any terrain. 
+      which opens the door to unlimited marketing possibilities. Our patterns can be modified to suit market or tactical needs in any terrain. 
   </p>
   <div class="w3-row">
     <div class="w3-col m12 w3-center w3-padding-large">
@@ -180,7 +180,7 @@
           </div>
         </div>
         <input class="w3-input w3-border" type="text" placeholder="Message" required name="Message">
-        <p>Please solve this math problem: <span id="mathCaptcha"></span></p>
+        <p style="font-size: 20px;">Please solve this math problem: <span id="mathCaptcha"></span></p>
         <input type="text" id="captchaInput" name="captchaInput" placeholder="Solution" required>
         <button class="w3-button w3-black w3-section" type="submit">
           <i class="fa fa-paper-plane"></i> SEND MESSAGE
