--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">  <!-- For social media icons -->
   <!-- Internal styles -->
   <link rel="stylesheet" href="/src/style.css">
-  <!-- Email TO BE REMOVED-->
-  <script src="https://smtpjs.com/v3/smtp.js"></script>
 </head>
 
 <body>
@@ -211,7 +209,7 @@
 
 <script>
 
-  function goTop(){
+function goTop(){
   // Check if the browser supports smooth scrolling
   if ('scrollBehavior' in document.documentElement.style) {
     // Modern browsers with smooth scrolling support
@@ -246,22 +244,33 @@ function toggleFunction() {
 function generateMathCaptcha() {
     var num1 = Math.floor(Math.random() * 10);
     var num2 = Math.floor(Math.random() * 10);
-    var operator = ['+', '-', 'x'][Math.floor(Math.random() * 3)];
+    var operators = ['+', '-', '*']; 
+    var operator = operators[Math.floor(Math.random() * operators.length)]; // Selecting a random operator from the array
     var captcha = num1 + ' ' + operator + ' ' + num2;
     document.getElementById("mathCaptcha").textContent = captcha;
     document.getElementById("captchaInput").value = '';
 }
 
-document.getElementById("contactForm").addEventListener("submit", async function(event) {
+// Function to validate captcha
+function validateCaptcha() {
+    const captchaInput = document.getElementById("captchaInput").value;
+    const captcha = document.getElementById("mathCaptcha").textContent;
+    return eval(captcha) === parseInt(captchaInput);
+  }
+
+// Function to handle form submission
+async function handleSubmit(event) {
   event.preventDefault(); // Prevent the form from submitting normally
-  
+  // Validate captcha
+  if (!validateCaptcha()) {
+    alert("Please solve the captcha correctly.");
+    return;
+  }
   // Prepare form data
   const formData = new FormData(event.target);
-  
   // Convert form data to JSON
   const jsonData = {};
   formData.forEach((value, key) => { jsonData[key] = value; });
-
   // Make POST request to Lambda function endpoint
   try {
     const response = await fetch('https://wxdsvvglcocwr66rszcyc6plvq0husxj.lambda-url.us-east-2.on.aws/', {
@@ -271,7 +280,6 @@ document.getElementById("contactForm").addEventListener("submit", async function
         'Content-Type': 'application/json'
       }
     });
-
     if (response.ok) {
       const data = await response.json();
       console.log(data.message);
@@ -285,12 +293,14 @@ document.getElementById("contactForm").addEventListener("submit", async function
     console.error("Error:", error);
     alert("Error sending message. Please try again later.");
   }
-});
+}
 
+// Attach event listener to form submission
+document.getElementById("contactForm").addEventListener("submit", handleSubmit);
 
-
+// Generate captcha on page load
 window.onload = function() {
-    generateMathCaptcha();
+  generateMathCaptcha();
 };
 
 </script>
